<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">欲望文件夹分析</string>
	<string name="action_settings">设置</string>
	<string name="hello_world">欢迎你，我的朋友！</string>
	<string name="parentFolderText">..</string>
	<string name="bySize">按大小</string>
	<string name="byName">按名称</string>
	<string name="sortDesc">排序方式</string>
	<string name="sortText">排序方式(较耗时)</string>
	<string name="exitStr">退 出</string>
	<string name="noSortDesc">文件(夹)数超过200将不排序</string>

</resources>
